# localisation-workbench

./: JSON2Excel.py  JSON_converter.py  JSONcompare.py  Multicolumn_excel2json.py  README.md  main-fr.json  pyproject.toml  requirements.txt  run_compare_test.py  run_csv_test.py  run_excel_test.py  run_json_to_excel_test.py
app/: streamlit_app.py
examples/: sample_fr.csv  sample_quality_input_with_reference.csv  sample_quality_output.csv  sample_translations.xlsx
examples/cli_output/Greetings/: main-fr.json
examples/compare_samples/: cli_report.txt  file_b.json
examples/json_to_excel_sample/: cli_translations.xlsx  translations.xlsx
examples/json_to_excel_sample/Greetings/: main-en.json
examples/output/Greetings/: main-de.json
src/localisation_workbench/: __init__.py  cli.py  quality_scoring.py  scoring_io.py
src/localisation_workbench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/localisation_workbench/converters/: csv_to_json.py  excel_to_json.py  json_compare.py  json_to_excel.py
tests/: test_cli.py  test_csv_to_json.py  test_quality_scoring.py  test_scoring_io.py
