[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localisation-workbench"
version = "0.1.0"
description = "Toolkit for converting and comparing localisation files across CSV, JSON, and Excel formats."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]